[package]
name = "ic-memory-link"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "http://github.com/wasm-forge/ic-memory-link"
homepage = "http://github.com/wasm-forge/ic-memory-link"
readme = "README.md"
keywords = ["icp", "internet-computer", "database"]

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
tempfile = "3.21.0"
ic-stable-structures = "0.7.0"

